--- a/css/index.css
+++ b/css/index.css
@@ -81,7 +81,7 @@ a:visited {
 
 .pageHeader {
     position: sticky;
-    top:0%;
+    top: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -104,8 +104,14 @@ a:visited {
     font-size: 16px;
 }
 
-.search:focus-visible{
+.search:focus-visible {
     outline: 3px solid var(--accentColor-hovered);
+}
+
+.body_footer {
+    padding: 24px;
+    color: rgba(255, 255, 255, 55%);
+    background: var(--accentColor);
 }
 
 .menu {
@@ -141,13 +147,21 @@ a:visited {
     align-items: center;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+    grid-column-gap: 0;
+    grid-row-gap: 0;
 }
 
-.facebook { grid-area: 1 / 1 / 2 / 2; }
-.twitter { grid-area: 1 / 2 / 2 / 3; }
-.instagram { grid-area: 1 / 3 / 2 / 4; }
+.facebook {
+    grid-area: 1 / 1 / 2 / 2;
+}
+
+.twitter {
+    grid-area: 1 / 2 / 2 / 3;
+}
+
+.instagram {
+    grid-area: 1 / 3 / 2 / 4;
+}
 
 .socialsGrid_icon-centered {
     margin: auto;
@@ -157,29 +171,28 @@ a:visited {
     color: var(--accentColor);
 }
 
-.body_footer {
-    padding: 24px;
-    color: rgba(255, 255, 255, 55%);
-    background: var(--accentColor);
-}
-
 @media screen and (min-width: 760px) {
     .unimportant {
         display: initial;
     }
+
     .mainContainer_main_article {
         flex-direction: row;
     }
+
     .menu_list-socials {
         flex-direction: column;
     }
+
     .mainContainer_main {
         padding: 0 24px;
     }
+
     .search {
         margin-top: 0;
         width: 250px;
     }
+
     .socialsGrid {
         display: grid;
         align-items: center;
@@ -188,18 +201,37 @@ a:visited {
         grid-column-gap: 20px;
         grid-row-gap: 20px;
     }
-    .facebook { grid-area: 1 / 1 / 2 / 2; }
-    .facebook-label { grid-area: 1 / 2 / 2 / 3; }
-    .twitter { grid-area: 2 / 1 / 3 / 2; }
-    .twitter-label { grid-area: 2 / 2 / 3 / 3; }
-    .instagram { grid-area: 3 / 1 / 4 / 2; }
-    .instagram-label { grid-area: 3 / 2 / 4 / 3; }
+
+    .facebook {
+        grid-area: 1 / 1 / 2 / 2;
+    }
+
+    .facebook-label {
+        grid-area: 1 / 2 / 2 / 3;
+    }
+
+    .twitter {
+        grid-area: 2 / 1 / 3 / 2;
+    }
+
+    .twitter-label {
+        grid-area: 2 / 2 / 3 / 3;
+    }
+
+    .instagram {
+        grid-area: 3 / 1 / 4 / 2;
+    }
+
+    .instagram-label {
+        grid-area: 3 / 2 / 4 / 3;
+    }
 }
 
 @media screen and (min-width: 760px) {
     .pageHeader {
         flex-direction: row;
     }
+
     .menu_list {
         flex-direction: row;
     }
