--- a/css/index.css
+++ b/css/index.css
@@ -13,70 +13,15 @@
 }
 
 html {
+    min-width: 100%;
+    display: flex;
     min-height: 100%;
-    width: 100%;
 }
 
 body {
-    height: 100vh;
     display: flex;
     flex-direction: column;
     font-family: "Montserrat", sans-serif;
-}
-
-a:link {
-    text-decoration: none;
-    color: var(--accentColor);
-}
-
-a:visited {
-    color: var(--accentColor);
-}
-
-::selection {
-    background-color: var(--accentColor-transp);
-}
-
-.fa-brands {
-    font-size: 40px;
-}
-
-.unimportant {
-    display: none;
-}
-
-.mainContainer {
-    display: flex;
-    flex: 1;
-    padding: 0 24px;
-}
-
-.mainContainer_additional {
-    width: 35%;
-    display: none;
-    border-right: 1px solid var(--accentColor-transp);
-}
-
-.mainContainer_main {
-    width: 100%;
-    padding: 24px 10px;
-    display: flex;
-    flex-direction: column;
-}
-
-.mainContainer_main_article {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-}
-
-.article_section {
-    margin-bottom: 24px;
-}
-
-.article_footer {
-    border-top: 1px solid var(--accentColor-transp);
-    color: var(--accentColor-transp);
 }
 
 .pageHeader {
@@ -112,6 +57,40 @@ a:visited {
     padding: 24px;
     color: rgba(255, 255, 255, 55%);
     background: var(--accentColor);
+}
+
+.mainContainer {
+    flex-grow: 1;
+    display: flex;
+    padding: 0 24px;
+}
+
+.mainContainer_additional {
+    width: 35%;
+    display: none;
+    border-right: 1px solid var(--accentColor-transp);
+}
+
+.mainContainer_main {
+    width: 100%;
+    padding: 24px 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.mainContainer_main_article {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.article_section {
+    margin-bottom: 24px;
+}
+
+.article_footer {
+    border-top: 1px solid var(--accentColor-transp);
+    color: var(--accentColor-transp);
 }
 
 .menu {
@@ -169,6 +148,27 @@ a:visited {
 
 .accented {
     color: var(--accentColor);
+}
+
+a:link {
+    text-decoration: none;
+    color: var(--accentColor);
+}
+
+a:visited {
+    color: var(--accentColor);
+}
+
+::selection {
+    background-color: var(--accentColor-transp);
+}
+
+.fa-brands {
+    font-size: 40px;
+}
+
+.unimportant {
+    display: none;
 }
 
 @media screen and (min-width: 760px) {
